cmake_minimum_required(VERSION 3.30 FATAL_ERROR)
project(Your-IQ-Called VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

#==============================================================================
#==============================================================================
#==============================================================================

add_subdirectory(Problems)
add_subdirectory(DataStructures)
add_subdirectory(Algorithms)
